--- a/store/app/html and css for django/css/min.css
+++ b/store/app/html and css for django/css/min.css
@@ -1,7 +1,6 @@
 *{
 margin: 0;
 padding: 0;
-
 }
 
 
@@ -9,76 +8,98 @@ body
 {
 background-color: rgba(255, 255, 255, 0.318);
 margin-top:50px ;
-
 }
+
+
 header
 {
-margin-left: 100px;
+margin-left: 170px;
 width:75%;
+max-width: 500px;
+transform-origin: top left;
+transform: scale(1);
+margin-left: auto;
+margin-right: auto;
 text-align: center;
 line-height: 100px;
 border:none solid darkblue;
 border-radius: 25px;
 background-color: rgb(78, 100, 93);
-
+word-spacing: 50px;
+margin-bottom: 20px;
 }
+
 
 a
 {
 border-radius: 10px solid rgb(0, 0, 0);
 text-decoration: none;
-color: bisque;
+color: rgb(255, 228, 196);
 }
+
+
+
+
 
 .product-card {
-  width: 300px;
-  border: 1px solid #ccc;
+  transform-origin: top left;
+  transform: scale(1);
+  width: 250px;
+  border: 0px solid #ccc;
   padding: 20px;
   text-align: center;
-  border-radius: 25px;
-  margin: 20px;
-    
+  background-color:  rgb(78, 100, 93);
+  border: 0.5px solid black;
+  max-width: 500px;  
 }
-
+.card{
+  display: flex;
+  justify-content:center;
+}
 .product-card img {
   width: 100%;
   max-height: 200px;
   object-fit: cover;
-  border-radius: 25px;
-}
 
+}
 .product-title {
   font-size: 18px;
   margin-top: 10px;
 }
-
-.product-description {
-  margin-top: 10px;
+.title-description{
+  text-align: center;
 }
-
 .product-price {
   font-size: 24px;
   font-weight: bold;
   margin-top: 10px;
 }
-
 .add-to-cart {
-  background-color: #ff8800;
-  color: white;
+  background-color: #ffcc002e;
+  
+  color: rgb(255, 228, 196);
   border: none;
   padding: 10px 20px;
   margin-top: 10px;
   cursor: pointer;
+  border-radius: 25px;
 }
+
+
+
+
 
 footer
 {
-  margin-top: 150%;
 text-align: center;
 width: 100%;
-height:100px;
-line-height: 100px;
+height:170px;
 color:bisque;
 background-color:  rgb(78, 100, 93);
+margin-top:100px ;
 
+}
+.textupper
+{
+line-height:100px 
 }
