Changed html pages(href to link) and added app/views.py more functions

--- a/store/app/templates/main/html/main.html
+++ b/store/app/templates/main/html/main.html
@@ -10,10 +10,10 @@
 <body>
 
   <header>
-    <a href="main.html">Main&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
-    <a href="man.html">Man&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
-    <a href="small kids.html">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspKids&nbsp</a>
-    <a href="women.html">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspWomen&nbsp</a>
+    <a href="/main/">Main&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
+    <a href="/man/">Man&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
+    <a href="/small-kids/">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspKids&nbsp</a>
+    <a href="/women/">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspWomen&nbsp</a>
     
   </header>
   <div>
