--- a/store/app/templates/main/html/small kids.html
+++ b/store/app/templates/main/html/small kids.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <header>
-    <a href="main.html">Main&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
-    <a href="man.html">Man&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
-    <a href="small kids.html">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspKids&nbsp</a>
+    <a href="main.html">Test&nbsp</a>
+    <a href="man.html"></a>
+    <a href="small kids.html">GGG</a>
     <a href="women.html">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspWomen&nbsp</a>
     
   </header>
